--- a/index.html
+++ b/index.html
@@ -2,11 +2,49 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Prework</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>Deliverable 1</title>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans:300,400,400i|Nunito:300,300i" rel="stylesheet">
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <h1>Hey</h1>
-</body>
+ 
+
+
+  <div class="main">
+    <nav class="navigation">
+       <ul>
+         <div class="logo"> <li><span class="learn">Learn to</span><span class="code"> Code</span></li> </div>
+          <li>Bootcamps</li>
+          <li>Workshops</li>
+          <li>Custom Training</li>
+          <li>Student Stories</li>
+          <li class="item">
+            <button class="btn2">Contact Us</button></li>
+</ul>
+</nav>
+</div>
+
+
+<br />
+<br />
+<br />
+<br />
+<br />
+<br />
+<div class="centered">
+<div class="center">
+    <h3>Do you think about <span class="learning">learning to code?</span></h3>
+  
+    <p>Learn to code and develop a new career!</p>
+    <br />
+    <button class="btn">Learn More</button>
+    <br />
+  </div>
+
+  <div class="pic">
+   <img  src="assets/code.png" alt="pic" width="50%" height="70%">
+</div>
+</div>
+  </body>
 </html>
